as always we now know :3